<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.UserFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--<RelativeLayout-->
        <!--android:id="@+id/profile_layout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="270dp"-->
        <!--android:background="#ebca0707"-->
        <!--android:elevation="4dp"-->
        <!--android:paddingBottom="24dp">-->

        <!--<ImageView-->

        <!--android:layout_width="120dp"-->
        <!--android:layout_height="120dp"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="38dp"-->
        <!--android:src="@mipmap/icon_user" />-->


        <!--<TextView-->
        <!--android:id="@+id/user_profile_money"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="166dp"-->
        <!--android:text="@string/money"-->
        <!--android:textColor="#fff"-->
        <!--android:textSize="24sp"-->
        <!--android:textStyle="bold" />-->

        <!--<TextView-->
        <!--android:id="@+id/tv_money"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/user_profile_money"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:text=""-->
        <!--android:textColor="#fff"-->
        <!--android:textSize="14sp" />-->
        <!--</RelativeLayout>-->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">
            <com.daimajia.slider.library.SliderLayout
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="200dp"></com.daimajia.slider.library.SliderLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:background="@color/transection"
                android:clickable="true"
                android:elevation="1dp"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:text="@string/wallet_id" />

                <TextView
                    android:id="@+id/tv_wallet_id"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/transection"
                android:clickable="true"
                android:elevation="2dp"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:text="@string/nameuser" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"

                android:background="@color/transection"
                android:clickable="true"
                android:elevation="3dp"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:text="@string/surname" />

                <TextView
                    android:id="@+id/tv_surname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"

                android:background="@color/transection"
                android:clickable="true"
                android:elevation="4dp"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"

                android:background="@color/transection"
                android:clickable="true"
                android:elevation="5dp"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:text="@string/tel" />

                <TextView
                    android:id="@+id/tv_tel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"

                android:background="@color/transection"
                android:clickable="true"
                android:elevation="6dp"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:text="@string/birthdate" />

                <TextView
                    android:id="@+id/tv_birthdate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:background="@color/transection"
                android:clickable="true"
                android:elevation="7dp"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:text="@string/sex" />

                <TextView
                    android:id="@+id/tv_sex"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>