<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="230dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:src="@mipmap/logo_white" />


            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:drawableLeft="@drawable/ic_people_white_24dp"
                android:hint="Username"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:textColor="#FFF"
                android:paddingLeft="0dp"
                android:drawablePadding="5dp"
                android:textColorHint="#999"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/et_password"
                android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
                android:hint="Password"
                android:textColor="#FFF"
                android:paddingLeft="0dp"
                android:drawablePadding="5dp"
                android:textColorHint="#999"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/et_cfpassword"
                android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
                android:hint="Confirm Password"
                android:layout_marginTop="10dp"
                android:textColor="#FFF"
                android:paddingLeft="0dp"
                android:drawablePadding="5dp"
                android:textColorHint="#999"/>




            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:ems="10"
                android:id="@+id/et_name"
                android:drawableLeft="@drawable/ic_people_white_24dp"
                android:hint="@string/hint_name"
                android:layout_marginTop="10dp"
                android:textColor="#FFF"
                android:paddingLeft="0dp"
                android:drawablePadding="5dp"
                android:textColorHint="#999"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/et_surname"
                android:drawableLeft="@drawable/ic_people_white_24dp"
                android:hint="@string/hint_surname"
                android:layout_marginTop="10dp"
                android:textColor="#FFF"
                android:paddingLeft="0dp"
                android:drawablePadding="5dp"
                android:textColorHint="#999"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890-"
                android:ems="10"
                android:inputType="phone"
                android:id="@+id/et_birth"
                android:drawableLeft="@drawable/ic_cake_white_24dp"
                android:hint="Birthday :yyyy-MM-dd"
                android:layout_marginTop="10dp"
                android:textColor="#FFF"
                android:paddingLeft="0dp"
                android:drawablePadding="5dp"
                android:textColorHint="#999"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/et_email"
                android:drawableLeft="@drawable/ic_email_white_24dp"
                android:hint="@string/email"
                android:layout_marginTop="10dp"
                android:textColor="#FFF"
                android:paddingLeft="0dp"
                android:drawablePadding="5dp"
                android:textColorHint="#999"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/et_tel"
                android:drawableLeft="@drawable/ic_phone_white_24dp"
                android:hint="@string/tel"
                android:layout_marginTop="10dp"
                android:textColor="#FFF"
                android:paddingLeft="0dp"
                android:drawablePadding="5dp"
                android:textColorHint="#999"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sex"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/rbmale"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/rbmale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Male  "
                    android:drawableRight="@mipmap/male"

                    android:textColor="@color/white"
                    />

                <RadioButton
                    android:id="@+id/rbfemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Female  "
                    android:drawableRight="@mipmap/female"
                    android:textColor="@color/white"
                    />


            </RadioGroup>


            <!-- Login Button -->

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/selector_xml_btn_yellow"
                android:onClick="OnReg"
                android:text="@string/btn_register"
                android:textColor="@color/white" />

            <!-- Link to Login Screen -->



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>